cmake_minimum_required(VERSION 2.8)
PROJECT(thed)
ADD_DEFINITIONS(-Os -Wall -Werror --std=gnu99 -Wno-Wmissing-declarations -Wno-unused-function)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/modules")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(SOURCES
	src/thed.c
	src/thed.h
)

ADD_EXECUTABLE(thed ${SOURCES})

FIND_PACKAGE(LIBUV REQUIRED)
INCLUDE_DIRECTORIES(${LIBUV_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(thed ${LIBUV_LIBRARIES})

FIND_PACKAGE(LIBROXML REQUIRED)
INCLUDE_DIRECTORIES(${LIBROXML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(thed ${LIBROXML_LIBRARIES})

INSTALL(TARGETS thed RUNTIME DESTINATION bin)
